--- a/style.css
+++ b/style.css
@@ -142,3 +142,21 @@ body {
     margin-left: 25px;
   }
 }
+@media (max-width: 350px) {
+  html {
+    font-size: 48%;
+  }
+  section main {
+    margin-top: 10em;
+  }
+  .simply-countdown > .simply-section {
+    padding: 25px;
+    margin: 4px;
+    border-radius: 3px 13px 3px 13px;
+    box-shadow: 1px 2px 3px 1px #00000091;
+    -webkit-border-radius: 3px 20px 3px 20px;
+    -moz-border-radius: 3px 20px 3px 20px;
+    -ms-border-radius: 3px 20px 3px 20px;
+    -o-border-radius: 3px 20px 3px 20px;
+  }
+}
