--- a/style.css
+++ b/style.css
@@ -74,11 +74,113 @@ body {
   box-shadow: 2px 3px 4px 1px #00000091 !important;
 }
 
+.mynavbar {
+  background-color: rgba(255, 255, 255, 0.3) !important;
+  backdrop-filter: blur(3px);
+}
+.mynavbar .offcanvas {
+  height: 100vh;
+}
+.mynavbar .navbar-brand,
+.mynavbar .offcanvas-title {
+  font-family: "Ephesis", cursive;
+  font-size: 3.2rem;
+  font-weight: bold;
+}
+.mynavbar .nav-link {
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #0a0a0a;
+  font-size: 1.4rem;
+}
+.mynavbar .nav-link:hover {
+  color: var(--pink);
+}
+/* .home::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(img/floral.png);
+  background-size: cover;
+  background-color: #c1c1c164;
+  filter: grayscale(50%);
+  opacity: 40%;
+  z-index: 1;
+  -webkit-filter: grayscale(50%);
+} */
+.home {
+  /* position: relative; */
+  background-image: url(img/floral2.png);
+  background-size: cover;
+  background-color: #c1c1c164;
+  min-height: 100vh;
+  margin-top: -6.4rem;
+  padding-top: 15rem;
+}
+.home .heart {
+  width: 50px;
+  height: 50px;
+  /* background-color: white; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) translateY(65px);
+  -webkit-transform: translateX(-50%) translateY(65px);
+  -moz-transform: translateX(-50%) translateY(65px);
+  -ms-transform: translateX(-50%) translateY(65px);
+  -o-transform: translateX(-50%) translateY(65px);
+}
+.home .heart i {
+  /* margin: auto; */
+  color: var(--pink);
+  font-size: 50px;
+  text-shadow: 0 0 5px rgba(255, 0, 247, 0.735);
+
+  /* background-color: aqua; */
+}
+.home .desc {
+  color: var(--bg);
+  z-index: 5;
+}
+.home h2 {
+  font-family: "Ephesis", cursive;
+  font-size: 5rem;
+  font-weight: bold;
+  color: var(--pink);
+  margin-top: -80px;
+}
+.home h3 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+.home p {
+  color: #515151;
+}
+.home .couple {
+  margin-top: 80px;
+}
+.home .couple h3 {
+  font-family: "Ephesis", cursive;
+  font-size: 2.4rem;
+  color: var(--pink);
+  font-weight: 600;
+}
+.home .couple img {
+  width: 100%;
+}
+
+@media (max-width: 1200px) {
+}
 @media (max-width: 992px) {
   html {
     font-size: 85%;
   }
-  body {
+  .hero::before {
     background-color: #0a0a0a;
   }
   section main {
@@ -112,6 +214,10 @@ body {
   .hero::before {
     background-position: 50% -6em;
     background-size: 150%;
+  }
+  .mynavbar .nav-link {
+    font-size: 2rem;
+    text-align: center;
   }
 }
 @media (max-width: 576px) {
